# rust_practice6

./: Cargo.toml  request.json
src/: main.rs
